--- a/speechbubble.html
+++ b/speechbubble.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+   <link rel="stylesheet" href="/css/speechbubble.css">
+    
+   <div class="speech bubble">hello gorgeous
+
+
+    </div>
     
 </body>
 </html>
